Add update trailer cross hitch value method
